--- a/games/launcher/game/style.css
+++ b/games/launcher/game/style.css
@@ -1,11 +1,15 @@
 body {
-  overflow: hidden;
-  margin: 0;
-  background-image: url("gfx/bg.png");
-  background-position: left center;
-  color: #d6d3d5;
-  font-family: arial;
-  font-size: 50px;
+    overflow: hidden;
+    margin: 0;
+    background-image: url("gfx/bg.png");
+    background-position: left center;
+    color: #d6d3d5;
+    font-family: arial;
+    font-size: 50px;
+}
+
+.fa-users img {
+    margin-right: 100px;
 }
 
 h1 {
@@ -14,80 +18,80 @@ h1 {
 }
 
 #header {
-  height: 10%;
+    height: 10%;
 }
 
 #header h1 {
-  margin-left: 50px;
+    margin-left: 50px;
 }
 
 #main_container {
-  position: absolute;
-  top: 13%;
-  bottom: 0%;
-  width:100%;
+    position: absolute;
+    top: 13%;
+    bottom: 0%;
+    width: 100%;
 }
 
 #list_container {
-  background-color: rgba(0, 0, 0, 0.6);
-  float: left;
-  width: 35%;
-  height: 95%;
-  margin: 0px 25px 50px 50px;
+    background-color: rgba(0, 0, 0, 0.6);
+    float: left;
+    width: 35%;
+    height: 95%;
+    margin: 0px 25px 50px 50px;
 }
 
 #games {
-  margin: 25px 25px 25px 40px;
-  list-style-type: none;
-  padding: 0px;
-  line-height: 80px;
+    margin: 25px 25px 25px 40px;
+    list-style-type: none;
+    padding: 0px;
+    line-height: 80px;
 }
 
 #game_container {
-  background-color: rgba(0, 0, 0, 0.6);
-  float: right;
-  width: 57%;
-  height: 95%;
-  margin: 0px 50px 50px 25px;
+    background-color: rgba(0, 0, 0, 0.6);
+    float: right;
+    width: 57%;
+    height: 95%;
+    margin: 0px 50px 50px 25px;
 }
 
 #game_info {
-  margin: 0px auto 0px auto;
-  width: 640px;
-  height: 360px;
+    margin: 0px auto 0px auto;
+    width: 640px;
+    height: 360px;
 }
 
 #title {
-  color: #ff5000;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 25px;
-  margin-bottom: 15px;
+    color: #ff5000;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 25px;
+    margin-bottom: 15px;
 }
 
 #screenshot {
-  background-color: black;
-  width: 640px;
-  height: 360px;
+    background-color: black;
+    width: 640px;
+    height: 360px;
 }
 
 #description {
-  margin-top: 25px;
-  font-size: 24px;
+    margin-top: 25px;
+    font-size: 24px;
 }
 
 .selected {
-  border-radius: 10px;
-  color: #ff5000;
-  background-color: rgba(0, 0, 0, 0.6);
-  padding-left: 20px;
-  margin-left: -20px;
+    border-radius: 10px;
+    color: #ff5000;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding-left: 20px;
+    margin-left: -20px;
 }
 
 #footer {
     height: 10%;
     position: absolute;
     bottom: 0px;
-    width:100%;
+    width: 100%;
 }
