--- a/games/launcher/game/style.css
+++ b/games/launcher/game/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     background-image: url("gfx/bg.png");
     background-position: left center;
-    color: #d6d3d5;
+    color: #eeefef;
     font-family: arial;
     font-size: 50px;
 }
@@ -11,6 +11,10 @@ body {
 h1 {
     margin-top: 25px;
     font-size: 84px;
+}
+
+.fa {
+  color: #ff0373;
 }
 
 #header {
@@ -29,7 +33,7 @@ h1 {
 }
 
 #list_container {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(17, 18, 19, 1);
     float: left;
     width: 35%;
     height: 95%;
@@ -44,7 +48,7 @@ h1 {
 }
 
 #game_container {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(17, 18, 19, 1);
     float: right;
     width: 57%;
     height: 95%;
@@ -58,7 +62,7 @@ h1 {
 }
 
 #title {
-    color: #ff5000;
+    color: #ff0373;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
@@ -67,6 +71,7 @@ h1 {
 }
 
 #screenshot {
+    border: 2px solid #eeefef;
     background-color: black;
     width: 640px;
     height: 360px;
@@ -79,7 +84,7 @@ h1 {
 
 .selected {
     border-radius: 10px;
-    color: #ff5000;
+    color: #ff0373;
     background-color: rgba(0, 0, 0, 0.6);
     padding-left: 20px;
     margin-left: -20px;
